k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todopro
  labels:
    name: todopro
