k8s/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: todopro
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
